[gd_scene load_steps=25 format=2]

[ext_resource path="res://imagens/spritesheet_player/arrow_right_icon_133719.png" type="Texture" id=1]
[ext_resource path="res://cenas/Jogador/Jogador.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/situacoes/Situacao2.gd" type="Script" id=3]
[ext_resource path="res://fontes/OldSchoolAdventures-42j9.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://WhatsApp Image 2023-03-12 at 21.14.21.jpeg" type="Texture" id=5]
[ext_resource path="res://imagens/spritesheet_player/3ef35179c31986a (2).png" type="Texture" id=7]
[ext_resource path="res://TransitionCasas.tscn" type="PackedScene" id=8]
[ext_resource path="res://imagens/aten.png" type="Texture" id=9]
[ext_resource path="res://imagens/parabens.png" type="Texture" id=10]
[ext_resource path="res://fontes/PTSansNarrow-Regular.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://imagens/npc2 parado2.png" type="Texture" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 88, 17.625 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "esquerda",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("NPC:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1189, 331 ), Vector2( 327, 261 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Situacao1"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("NPC:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1155, 337 ), Vector2( 353, 337 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "sit_2"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.1, 2.8, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 475, 567 ), Vector2( 477, 490 ), Vector2( 779, 505 ), Vector2( 797, 440 ) ]
}

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=9]
size = 10
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 19
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 11 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 22, 36 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 175.25, 133.5 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 553, 10 )

[node name="Situacao2" type="Node2D"]
position = Vector2( 0, -5 )
script = ExtResource( 3 )

[node name="Mapa" type="Sprite" parent="."]
position = Vector2( 511.6, 304.65 )
scale = Vector2( 1.33438, 1.33772 )
texture = ExtResource( 5 )

[node name="saida" type="Area2D" parent="."]
position = Vector2( 171, 474.75 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="saida"]
light_mask = 3
position = Vector2( -2, -120.75 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 726, 317 )
scale = Vector2( 2.81649, 3.00333 )
texture = ExtResource( 12 )

[node name="NPC" type="AnimatedSprite" parent="."]
position = Vector2( 475, 567 )
scale = Vector2( 0.604137, 1.47845 )
frames = SubResource( 7 )
animation = "esquerda"
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="NPC"]
anims/RESET = SubResource( 2 )
anims/Situacao1 = SubResource( 3 )
anims/sit_2 = SubResource( 10 )

[node name="Personagem" parent="." instance=ExtResource( 2 )]
position = Vector2( 166, 296 )
scale = Vector2( 1.3, 1.3 )

[node name="CaixaDialogo" type="ColorRect" parent="."]
visible = false
margin_top = 424.0
margin_right = 1024.0
margin_bottom = 607.0

[node name="conversa" type="Label" parent="CaixaDialogo"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 22.0
margin_top = 51.0
margin_right = 964.0
margin_bottom = 192.0
rect_scale = Vector2( 0.947278, 0.752094 )
custom_fonts/font = SubResource( 4 )
text = "tttttttttttttttt"
align = 3
autowrap = true

[node name="Button" type="TextureButton" parent="CaixaDialogo"]
margin_left = 956.0
margin_top = 121.0
margin_right = 1033.0
margin_bottom = 183.0
texture_normal = ExtResource( 1 )
expand = true

[node name="conversa2" type="Label" parent="CaixaDialogo"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 26.0
margin_top = 167.0
margin_right = 968.0
margin_bottom = 308.0
rect_scale = Vector2( 0.947, 0.752 )
rect_pivot_offset = Vector2( -17, -459 )
custom_fonts/font = SubResource( 6 )
align = 3
autowrap = true

[node name="nome" type="Label" parent="CaixaDialogo"]
margin_left = 12.0
margin_top = 7.0
margin_right = 59.0
margin_bottom = 26.0
rect_scale = Vector2( 2.62044, 2.48758 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "te"

[node name="VBoxContainer" type="VBoxContainer" parent="CaixaDialogo"]
margin_left = 8.0
margin_top = 50.0
margin_right = 947.0
margin_bottom = 174.0

[node name="Escolha1" type="LinkButton" parent="CaixaDialogo/VBoxContainer"]
modulate = Color( 0.45098, 0.368627, 0.368627, 1 )
margin_right = 939.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 5 )
text = "a) Recusar a oferta e informar o Compliance sobre o acontecimento"
underline = 1

[node name="Escolha2" type="LinkButton" parent="CaixaDialogo/VBoxContainer"]
modulate = Color( 0.45098, 0.368627, 0.368627, 1 )
margin_top = 30.0
margin_right = 939.0
margin_bottom = 56.0
focus_mode = 2
custom_fonts/font = SubResource( 5 )
text = "b) Recusar a oferta e instalar a fibra da Tim"
underline = 1

[node name="Escolha3" type="LinkButton" parent="CaixaDialogo/VBoxContainer"]
modulate = Color( 0.45098, 0.368627, 0.368627, 1 )
margin_top = 60.0
margin_right = 939.0
margin_bottom = 86.0
focus_mode = 2
custom_fonts/font = SubResource( 5 )
text = "c) Pegar o dinheiro, mas não instalar a fibra e usar para auxiliar na renda da sua família"
underline = 1

[node name="Escolha4" type="LinkButton" parent="CaixaDialogo/VBoxContainer"]
modulate = Color( 0.45098, 0.368627, 0.368627, 1 )
margin_top = 90.0
margin_right = 939.0
margin_bottom = 116.0
focus_mode = 2
custom_fonts/font = SubResource( 5 )
text = "d) Aceitar o dinheiro e instalar a fibra"
underline = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="atencao" type="Sprite" parent="."]
visible = false
position = Vector2( 539, 195 )
scale = Vector2( 0.49862, 0.592794 )
texture = ExtResource( 9 )

[node name="passar" type="TouchScreenButton" parent="atencao"]
visible = false
position = Vector2( 262.564, 501.276 )
scale = Vector2( 0.219298, 0.191462 )
normal = ExtResource( 1 )

[node name="feedback" type="Label" parent="atencao"]
margin_left = -485.0
margin_top = 153.0
margin_right = -214.0
margin_bottom = 243.0
rect_scale = Vector2( 3.01222, 3.91155 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.678431, 0.647059, 0.647059, 1 )
custom_fonts/font = SubResource( 8 )
text = "teste"
align = 3
valign = 1
autowrap = true

[node name="parabens" type="Sprite" parent="."]
visible = false
position = Vector2( 464, 230 )
scale = Vector2( 0.438477, 0.521291 )
texture = ExtResource( 10 )

[node name="passar" type="TouchScreenButton" parent="parabens"]
position = Vector2( 499.456, 494.925 )
scale = Vector2( 0.219298, 0.191462 )
normal = ExtResource( 1 )

[node name="feedback" type="Label" parent="parabens"]
margin_left = -385.0
margin_top = 8.0
margin_right = -69.0
margin_bottom = 133.0
rect_scale = Vector2( 3.01222, 3.91155 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.678431, 0.647059, 0.647059, 1 )
text = "teste"
align = 3
valign = 1
autowrap = true

[node name="CanvasLayer" parent="." instance=ExtResource( 8 )]
visible = false

[node name="banco" type="Area2D" parent="."]
position = Vector2( -1, 2 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="banco"]
position = Vector2( 725, 399 )
shape = SubResource( 11 )

[node name="enemy" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="npc" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="resposta" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -18.0
margin_top = 343.0
margin_right = 342.0
margin_bottom = 620.0
color = Color( 0, 0, 0, 1 )

[node name="Colisoes" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="parede" type="CollisionPolygon2D" parent="Colisoes"]
position = Vector2( 3, 0 )
polygon = PoolVector2Array( 0, 99, 637, 98, 638, 378, 1022, 379, 1024, 1, -6, 1 )

[node name="mesa" type="CollisionPolygon2D" parent="Colisoes"]
position = Vector2( 4, 0 )
polygon = PoolVector2Array( 652, 532, 654, 585, 661, 589, 652, 602, 705, 603, 695, 590, 702, 579, 704, 532 )

[node name="mesa2" type="CollisionPolygon2D" parent="Colisoes"]
position = Vector2( 262, 0 )
polygon = PoolVector2Array( 652, 532, 654, 585, 661, 589, 652, 602, 705, 603, 695, 590, 702, 579, 704, 532 )

[node name="mesa3" type="CollisionPolygon2D" parent="Colisoes"]
position = Vector2( 2, 0 )
polygon = PoolVector2Array( 397, 532, 398, 580, 405, 590, 397, 604, 450, 603, 441, 590, 448, 579, 449, 532 )

[node name="mesa4" type="CollisionPolygon2D" parent="Colisoes"]
position = Vector2( 2, 0 )
polygon = PoolVector2Array( 92, 103, 93, 139, 101, 155, 108, 155, 116, 134, 229, 133, 232, 156, 238, 157, 238, 148, 246, 137, 246, 101 )

[node name="sinuca" type="CollisionPolygon2D" parent="Colisoes"]
position = Vector2( 3, 0 )
polygon = PoolVector2Array( 423, 148, 424, 263, 431, 276, 439, 279, 436, 267, 497, 268, 491, 281, 498, 281, 508, 262, 508, 147, 479, 128, 450, 128 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Colisoes"]
position = Vector2( 167, 477 )
shape = SubResource( 12 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Colisoes"]
position = Vector2( 495, 613 )
shape = SubResource( 13 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Colisoes"]
position = Vector2( 1035, 235 )
rotation = 1.5708
shape = SubResource( 13 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Colisoes"]
position = Vector2( -10, 267 )
rotation = 1.5708
shape = SubResource( 13 )

[connection signal="body_entered" from="saida" to="." method="_on_saida_body_entered"]
[connection signal="pressed" from="CaixaDialogo/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CaixaDialogo/VBoxContainer/Escolha1" to="." method="_on_Escolha1_pressed"]
[connection signal="pressed" from="CaixaDialogo/VBoxContainer/Escolha2" to="." method="_on_Escolha2_pressed"]
[connection signal="pressed" from="CaixaDialogo/VBoxContainer/Escolha3" to="." method="_on_Escolha3_pressed"]
[connection signal="pressed" from="CaixaDialogo/VBoxContainer/Escolha4" to="." method="_on_Escolha4_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="atencao/passar" to="." method="_on_passar_pressed"]
[connection signal="pressed" from="parabens/passar" to="." method="_on_passar_pressed"]
[connection signal="body_entered" from="banco" to="." method="_on_banco_body_entered"]
[connection signal="timeout" from="enemy" to="." method="_on_enemy_timeout"]
[connection signal="timeout" from="npc" to="." method="_on_npc_timeout"]
[connection signal="timeout" from="resposta" to="." method="_on_resposta_timeout"]
